working on question

--- a/src/app/questiontype/fillblanktable/fillblanktable.component.html
+++ b/src/app/questiontype/fillblanktable/fillblanktable.component.html
@@ -1,3 +1,4 @@
+<div attr.id="{{'tab'+index}}" class="section" > 
 <div class="row">
   <div class="col-sm-12">
     <h3 [innerHTML]="content.name | safeHtml"></h3>
@@ -31,4 +32,5 @@
       </tbody>
     </table>
   </div>
+</div>
 </div>
