--- a/src/app/questiontype/truefalseradionbutton/truefalseradionbutton.component.html
+++ b/src/app/questiontype/truefalseradionbutton/truefalseradionbutton.component.html
@@ -1,3 +1,4 @@
+<div attr.id="{{'tab'+index}}" class="section" > 
 <div class="row">
   <div class="col-sm-12 custom-form">
     <h3 [innerHTML]="content.name | safeHtml"></h3>
@@ -12,4 +13,5 @@
           </li>
     </ul>
   </div>
+</div>
 </div>
