--- a/src/app/questiontype/fillintheblank/fillintheblank.component.html
+++ b/src/app/questiontype/fillintheblank/fillintheblank.component.html
@@ -1,3 +1,4 @@
+<div attr.id="{{'tab'+index}}" class="section" > 
 <div class="row">
   <div class="col-sm-12">
     <h3 [innerHTML]="content.name | safeHtml"></h3>
@@ -9,4 +10,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
