--- a/src/app/questiontype/singleselectradiobutton/singleselectradiobutton.component.html
+++ b/src/app/questiontype/singleselectradiobutton/singleselectradiobutton.component.html
@@ -1,6 +1,7 @@
+<div attr.id="{{'tab'+index}}" class="section" > 
 <div class="row">
   <div class="col-sm-12 custom-form">
-    <h3 [innerHTML]="question.question | safeHtml"></h3>
+    <h3 [innerHTML]="content.name | safeHtml"></h3>
     <ul class="list-unstyled rad-list">
         <li class="list-inline-item" *ngFor="let n of question['choices'] let i = index">
             <label [attr.for]="'s'+i" >
@@ -12,4 +13,5 @@
           </li>
     </ul>
   </div>
+</div>
 </div>
