--- a/src/app/questiontype/truefalsedropdown/truefalsedropdown.component.html
+++ b/src/app/questiontype/truefalsedropdown/truefalsedropdown.component.html
@@ -1,3 +1,4 @@
+<div attr.id="{{'tab'+index}}" class="section" > 
 <div class="row">
   <div class="col-sm-12">
     <h3 [innerHTML]="content.name | safeHtml"></h3>
@@ -20,4 +21,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
