add alerts for pass and fail state

--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -80,8 +80,14 @@
         </aside>
         <div id="content">
           <div  #parent></div>
-          <div class="btn-holder">
-            <a href="javascript:void(0)" class="btn btn-lg btn-success">Submit</a>
+          <div class="btn-holder clearfix">
+              <div class="alert alert-success" role="alert">
+                  <i class="fa fa-thumbs-up" aria-hidden="true"></i> You successfully Completed the Question.
+              </div>
+              <div class="alert alert-danger" role="alert">
+                <i class="fa fa-thumbs-down" aria-hidden="true"></i> Please Try again.
+              </div>
+              <a href="javascript:void(0)" class="btn btn-lg btn-success">Submit</a>
           </div>
         </div>
       
