--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -19,7 +19,7 @@
             <article  class="card">
               <div class="card-block">
                 <header class="header clearfix">
-                  <div class="img-holder"><img [attr.src]="getRandomImage(i) | safeUrl" class="img-fluid" alt="course Icon"></div>
+                  <div class="img-holder"><img [attr.src]="course.img | safeUrl" class="img-fluid" alt="course Icon"></div>
                   <div class="header-info">
                     <time datetime="2017-12-18">1 hr</time>
                     <div ngbDropdown class="dropdown">
