add public website

--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -24,10 +24,27 @@ $dark-grayish-blue							: #8e98a5;
 $dark-grayish-blue3							: #8e97a4;
 $moderate-cyan 								: #4eb6a4;
 
+$yellow-cinch								: #febb23;
+$orange-cinch								: #f99e4b;
+$green-cinch								: #38917f;
+$red-cinch									: #f3736c;
+$blue-light-cinch							: #62acca;
+$bluish-gray-light-cinch					: #8892a1;
+$bluish-gray-cinch							: #5f6e7d;
 
+
+// Fonts
+$museo-slab-500								: 'MuseoSlab-500';
+$museo-sans-300								: 'MuseoSans-300';
+$museo-sans-500								: 'MuseoSans-500';
+$museo-sans-700								: 'MuseoSans-700';
 
 
 $base-min-width								: 320px;
+
+$navbar-height-xs							: 157px;
+$navbar-height-sm							: 157px;
+$navbar-height-lg							: 157px;
 
 
 // Bootstrap overrides
