--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -57,3 +57,7 @@ $media-expressions: (
 @import 'components/audio-slideshow';
 @import 'components/question-types';
 @import 'components/custom-form';
+
+@import 'components/home-page';
+@import 'components/web-custom';
+@import 'components/navbar';
