--- a/src/app/questiontype/singleselectdropdown/singleselectdropdown.component.html
+++ b/src/app/questiontype/singleselectdropdown/singleselectdropdown.component.html
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col-sm-12">
     <h3 [innerHTML]="content.name | safeHtml"></h3>
+    <p><strong>{{question.question}}</strong></p>
     <div class="row">
       <div class="col-sm-6">
         <div class="select-block">
