--- a/src/app/questiontype/fillintheblank/fillintheblank.component.html
+++ b/src/app/questiontype/fillintheblank/fillintheblank.component.html
@@ -2,6 +2,7 @@
 <div class="row">
   <div class="col-sm-12">
     <h3 [innerHTML]="content.name | safeHtml"></h3>
+    <p><strong>{{question.question}}</strong></p>
     <div class="row">
       <div class="col-sm-6">
           <input  (input)="onOptionChanged($event.target.value)"  class="form-control">
