--- a/src/app/questiontype/multiselectioncheckbox/multiselectioncheckbox.component.html
+++ b/src/app/questiontype/multiselectioncheckbox/multiselectioncheckbox.component.html
@@ -2,6 +2,7 @@
 <div class="row">
   <div class="col-sm-12 custom-form">
     <h3 [innerHTML]="content.name | safeHtml"></h3>
+    <p><strong>{{question.question}}</strong></p>
     <ul class="list-unstyled rad-list">
         <li *ngFor="let n of names let i = index">
             <label [attr.for]="'m'+i">
