--- a/src/app/cinchhub/website/website.component.html
+++ b/src/app/cinchhub/website/website.component.html
@@ -1,6 +1,80 @@
-<div id="wrapper">
+<div id="page">
     <!-- navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-toggleable-sm navbar-light fixed-top">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" href="#"><img class="img-fluid" src="assets/images/cinch-logo.png" alt="cinch" /></a>
+    
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav nav">
+            <li>
+                <a href="#problem">
+                    <span class="bg-yellow">
+                        <img src="assets/images/problem-icon.svg" width="55" />
+                    </span>PROBLEM
+                </a>
+            </li>
+            <li>
+                <a href="#solution">
+                    <span class="bg-orange">
+                        <img src="assets/images/solution-icon.svg" width="42" />
+                    </span>SOLUTION
+                </a>
+            </li>
+            <li class="dropdown">
+                <a href="#features" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                    <span class="bg-green">
+                        <img src="assets/images/features-icon.svg" width="40" />
+                    </span>FEATURES
+                </a>
+                <ul class="dropdown-menu">
+                    <li>
+                        <a href="#features">Content</a>
+                    </li>
+                    <li>
+                        <a href="#administration">Administration</a>
+                    </li>
+                    <li>
+                        <a href="#integration">Integration</a>
+                    </li>
+                    <li>
+                        <a href="#exams">Exams</a>
+                    </li>
+                    <li>
+                        <a href="#dashboards">Dashboards</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#clients">
+                    <span class="bg-red">
+                        <img src="assets/images/clients.svg" width="40" />
+                    </span> CLIENTS
+                </a>
+            </li>
+
+            <li>
+                <a href="http://blog.cinchhub.com">
+                    <span class="bg-gray">
+                        <img src="assets/images/features-icon.svg" width="40" />
+                    </span> BLOG
+                </a>
+            </li>
+
+            <li>
+                <a href="#contactus">
+                    <span class="bg-blue-light">
+                        <img src="assets/images/contactus-icon.svg" width="47" />
+                    </span>CONTACT
+                </a>
+            </li>
+        </ul>
+    </div>
+    </nav>
+
+    <nav class="navbar navbar-default navbar-fixed-top hidden">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
@@ -85,7 +159,7 @@
     </nav>
 
     <section id="hero-section">
-        <div class="main-container hidden">
+        <div class="main-container">
             <section class="cover fullscreen image-slider slider-all-controls controls-inside parallax">
                 <ul class="slides">
                     <li>
@@ -508,9 +582,7 @@
 
         </div>
     </section>
-    <footer>
-        <footer>&copy; Copyright 2016 Acumenity LLC</footer>
-    </footer>
+    <footer class="page-footer">&copy; Copyright 2016 Acumenity LLC</footer>
 
 
     <!-- Contact Form (popup) -->
@@ -546,7 +618,7 @@
                     </button>
                     <h1 class="text-center">See how Cinch can revolutionize your training</h1>
                     <div>
-                        <video id="video" src="Cinch_v3.mp4" controls="true" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen
+                        <video id="video" src="assets/images/videos/Cinch_v3.mp4" controls="true" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen
                             allowfullscreen></video>
                     </div>
                 </div>
