--- a/src/assets/scss/components/_home-page.scss
+++ b/src/assets/scss/components/_home-page.scss
@@ -1,3 +1,40 @@
+#page{
+	width: 100%;
+	position: relative;
+	overflow: hidden;
+
+	color: $bluish-gray-cinch;
+	background-color: white;
+	font-size: $base-font-cinch - 4;
+	line-height: $line-height-cinch;
+	-ms-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+	padding-top: $navbar-height-xs;
+	
+	@media (min-width: 768px) {
+		padding-top: $navbar-height-sm;
+		font-size: $base-font-cinch;
+	}
+	
+	@media (min-width: 992px) {
+		padding-top: $navbar-height-lg;
+	}
+
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6{
+		font-family: $font-family-sans-serif;
+	}
+
+	b,
+	strong {
+		font-family: $museo-sans-500;
+	}
+}
+
 #hero-section {
 	color: white;
 	position: relative;
@@ -306,6 +343,7 @@
 				padding: 20px 0;
 				vertical-align: middle;
 				box-sizing: border-box;
+				text-align: center;
 			}
 			img {
 				margin: auto;
@@ -330,17 +368,41 @@
         max-width: 180px;
         color: white;
         font-size: 18px;
-        font-family: $museo-slab-500;
+		font-family: $museo-slab-500;
+		
+		&.btn-video {
+			font-size: 14px;
+			color: white;
+			background: $green-cinch;
+
+			&:hover {
+				color: #333;
+				background: rgba(56, 145, 127, 0.8);
+			}
+		}
+
         @media (min-width: 768px) {
+			
             margin: 50px auto 10px;
             padding: 20px 16px 19px;
             font-size: 30px;
-            max-width: 300px;
+			max-width: 300px;
+			
+			&.btn-video {
+				font-size: 24px;
+				background: $green-cinch;
+			}
+
         }
         &:hover {
             background: darken($yellow-cinch, 15%);
         }
-    }
+	}
+	
+	&.btn-video {
+		font-size: 24px;
+		background: #38917f;
+	}
 }
 
 #classroom,
@@ -402,4 +464,10 @@
 			}
 		}
 	}
+}
+
+.page-footer{
+	overflow: hidden;
+	padding: 2rem 1rem;
+	text-align: center;
 }
