--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -2,7 +2,10 @@
 	background: white;
 	border: none;
 	height: 73px;
-
+	padding-top: 0 !important;
+	padding-bottom: 0 !important;
+	box-shadow: 0 2px 10px rgba(black,.2);
+	-webkit-box-shadow: 0 2px 10px rgba(black,.2);
 	@include transition(all 0.2s);
 	
 	@media (min-width: 768px) {
@@ -11,6 +14,7 @@
 	
 	@media (max-width: 991px) {
 		// @include box-shadow( 0 2px 10px rgba(0, 0, 0, 0.2) );
+		
 	}
 	
 	@media (min-width: 992px) {
@@ -19,20 +23,20 @@
 	
 	.navbar-collapse {
 		max-height: 366px;
+		flex-direction: row-reverse;
 		
 		@media (max-width: 767px) {
 			background: white;
 		}
+
 	}
-	.container{
-	width:100%
-	}
+	.container{width:100%}
 	
 	.nav {
 		@include transition(all 0.2s);
 		
 		@media (min-width: 768px) {
-			margin-top: 25px;
+			// margin-top: 25px;
 			margin-right: 0;
 		}
 		
@@ -49,6 +53,7 @@
 			> a {
 				color: $bluish-gray-light-cinch;
 				font-size: 12px;
+				display: block;
 				font-family: $museo-sans-500;
 				@include transition(all 0.2s);
 				
@@ -179,6 +184,8 @@
 	&.scrolled {
 		height: $navbar-height-sm;
 		// @include box-shadow( 0 2px 10px rgba(0, 0, 0, 0.2) );
+		box-shadow: 0 2px 10px rgba(black,.2);
+		-webkit-box-shadow: 0 2px 10px rgba(black,.2);
 		
 		.nav {
 			margin-top: 10px;
@@ -201,45 +208,39 @@
 					}
 				}
 			}
-		}
+		}		
+	}
+	.navbar-brand {
+		width: 100px;
+		height: auto;
+		padding: 10px;
+		margin-right: 0;
+		@include transition(all 0.2s);
 		
-		.navbar-brand {
+		@media (min-width: 768px) {
+			width: auto;
 			height: $navbar-height-sm;
 			padding: 15px;
+			margin-left: -1rem;
 			
-			img {
-				height: 100%;
+		}
+		
+		@media (min-width: 992px) {
+			height: $navbar-height-lg;
+			padding: 15px;
+		}
+		
+		img {
+			
+			@media (min-width: 768px) {
 				width: auto;
+				max-width: inherit !important;
+				height: 100%;
 			}
 		}
 	}
 }
 
-.navbar-brand {
-	width: 100px;
-	height: auto;
-	padding: 10px;
-	@include transition(all 0.2s);
-	
-	@media (min-width: 768px) {
-		width: auto;
-		height: $navbar-height-sm;
-		padding: 15px;
-		
-	}
-	
-	@media (min-width: 992px) {
-		height: $navbar-height-lg;
-		padding: 15px;
-	}
-	
-	img {
-		
-		@media (min-width: 768px) {
-			width: auto;
-		}
-	}
-}
 
 .navbar-toggle {
 	margin: 20px 10px;
