--- a/src/assets/scss/components/_flex-slider.scss
+++ b/src/assets/scss/components/_flex-slider.scss
@@ -133,7 +133,7 @@ html[xmlns] .flexslider .slides {
 }
 
 .flex-direction-nav {
-    *height: 0;
+    height: 0;
 }
 
 .flex-direction-nav a {
@@ -155,6 +155,23 @@ html[xmlns] .flexslider .slides {
     -ms-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
+}
+
+.flex-direction-nav a{
+    opacity: 1;
+    font-size: 0;
+    line-height: 0;
+    text-shadow: none;
+    color: rgba(black,0);
+}
+
+.flex-direction-nav a.flex-next:before {
+    content: '' !important;
+    font-size: 0;
+    background: url(../images/arrow-next.png) no-repeat center center;
+    display: block;
+    width: 32px;
+    height: 32px;
 }
 
 .flex-direction-nav a:before {
@@ -266,6 +283,7 @@ html[xmlns] .flexslider .slides {
     display: block;
     background: #666;
     background: rgba(0, 0, 0, 0.5);
+    background: none;
     cursor: pointer;
     text-indent: -9999px;
     -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
