--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -4,8 +4,6 @@
 	height: 73px;
 	padding-top: 0 !important;
 	padding-bottom: 0 !important;
-	box-shadow: 0 2px 10px rgba(black,.2);
-	-webkit-box-shadow: 0 2px 10px rgba(black,.2);
 	@include transition(all 0.2s);
 	
 	@media (min-width: 768px) {
@@ -13,6 +11,8 @@
 	}
 	
 	@media (max-width: 991px) {
+		box-shadow: 0 2px 10px rgba(black,.2);
+		-webkit-box-shadow: 0 2px 10px rgba(black,.2);
 		// @include box-shadow( 0 2px 10px rgba(0, 0, 0, 0.2) );
 		
 	}
@@ -235,7 +235,7 @@
 			@media (min-width: 768px) {
 				width: auto;
 				max-width: inherit !important;
-				height: 100%;
+				height: auto;
 			}
 		}
 	}
