updated UI of public website

--- a/src/app/cinchhub/website/website.component.html
+++ b/src/app/cinchhub/website/website.component.html
@@ -28,6 +28,7 @@
                     <span class="bg-green">
                         <img src="assets/images/features-icon.svg" width="40" />
                     </span>FEATURES
+                    <i class="fa fa-caret-down" aria-hidden="true"></i>
                 </a>
                 <ul class="dropdown-menu">
                     <li>
@@ -68,6 +69,13 @@
                     <span class="bg-blue-light">
                         <img src="assets/images/contactus-icon.svg" width="47" />
                     </span>CONTACT
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span class="bg-blue-light">
+                        <img src="assets/images/book.svg" width="47" />
+                    </span>COURESES
                 </a>
             </li>
         </ul>
