--- a/src/app/cinchhub/website/website.component.html
+++ b/src/app/cinchhub/website/website.component.html
@@ -1,4 +1,4 @@
-<div id="page">
+<div id="page" class="page">
     <!-- navbar -->
     <nav class="navbar navbar-toggleable-sm navbar-light fixed-top">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
