--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="logo"><a href="#"><img src="assets/images/logo-dark.svg" class="img-fluid" alt="Cinch"></a></div>
-          <a href="javascript:void(0)" (click)="back()" class="btn btn-outline-primary pull-right btn-home"><i class="fa fa-angle-left"  aria-hidden="true"></i> Back To Home</a>
+          <a href="javascript:void(0)" *ngIf="!showDetail" (click)="back()" class="btn btn-outline-primary pull-right btn-home"><i class="fa fa-angle-left"  aria-hidden="true"></i> Back To Home</a>
         </div>
       </div>
     </div>
