--- a/src/app/questiontype/truefalseradionbutton/truefalseradionbutton.component.html
+++ b/src/app/questiontype/truefalseradionbutton/truefalseradionbutton.component.html
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-sm-12 custom-form">
     <h3 [innerHTML]="content.name | safeHtml"></h3>
-    <p><strong>{{question.question}}</strong></p>
+    <p  [innerHTML]="question.question | safeHtml"></p>
     <ul class="list-inline rad-list">
         <li class="list-inline-item" *ngFor="let n of question['choices'] let i = index">
             <label [attr.for]="'r'+i" >
